--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <title>HangMan</title>
 </head>
-<body>
-    <div class="container">
-        <p>THIS IS SOME TEST SHIT</p>
+<body style="background-color: black;">
+    <!-- Make a Bootstrap container -->
+    <div class="container" style="background-color: black;">
+    <!-- Make first row to hold the Hangman image -->
+        <div class="row">
+            <div class="col-md-12">
+                <img src="./assets/images/hangmans_delight.png" alt="Hangman" id="hangman-pic">
+            </div>
+        </div>
+    <!-- Make second row with two columns, one for an image and one for the game -->
+        <div class="row">
+            <div class="col-md-4 hangman-col">
+                <p>This is where the pictures should go</p>
+            </div>
+            <div class="col-md-8 hangman-col">
+                <h2>Press any button to get started!</h2>
+                <h3>Wins: <span id="wins"> </span></h3>
+                <h3>Current Word: <span id="current-word"> </span></h3>
+                <h3>Number of guesses remaining: <span id="guesses-remaining"> </span></h3>
+                <h3>Letters already guessed: <span id="already-guessed"> </span></h3>
+            </div>
+        </div>
+       
 
     </div>
     
