Webpage is better now, still gotta code the logic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
                 <img src="./assets/images/hangmans_delight.png" alt="Hangman" id="hangman-pic">
             </div>
         </div>
-    <!-- Make second row with two columns, one for an image and one for the game -->
+    <!-- make a second row for title and image of theme -->
+        <div class="row">
+            <div class="col-md-3">
+                <h1 style="color: white; font-family: 'Cinzel', serif;">DCLXVI</h1>
+            </div>
+            <div class="col-md-6">
+                <img src="./assets/images/occult.jpg" alt="occult">
+            </div>
+            <div class="col-md-3" id="dclxvi">
+                <h1 style="color: white; font-family: 'Cinzel', serif;">DCLXVI</h1>
+            </div>
+        </div>
+    <!-- Make third row with two columns, one for an image and one for the game -->
         <div class="row">
             <div class="col-md-4 hangman-col">
                 <p>This is where the pictures should go</p>
@@ -28,6 +40,7 @@
             <div class="col-md-8 hangman-col">
                 <h2>Press any button to get started!</h2>
                 <h3>Wins: <span id="wins"> </span></h3>
+                <h3>Losses: <span id="losses"> </span></h3>
                 <h3>Current Word: <span id="current-word"> </span></h3>
                 <h3>Number of guesses remaining: <span id="guesses-remaining"> </span></h3>
                 <h3>Letters already guessed: <span id="already-guessed"> </span></h3>
