I'm adding an array of pictures to match the words

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <!-- Make third row with two columns, one for an image and one for the game -->
         <div class="row">
             <div class="col-md-4 hangman-col">
-                <p>This is where the pictures should go</p>
+                <h2><span id="wins-loss"></span></h2>
+                <img id="end-game" src="./assets/images/hangman.jpg" alt="This imagee changes depending on the word">
             </div>
             <div class="col-md-8 hangman-col">
                 <h2>Press any button to get started!</h2>
